Sat Jan 24 01:01:43 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-cxx.cc sficxx.h: Made the to_seq conversion function static,
	similar to to_rec.

Fri Jan 23 19:27:10 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-cxx.cc: CodeGeneratorCxxBase::printRecSeqImpl: generate
	get_fields method only when used for the server binding.
	Fixed bug in the property setter generation - record and sequence
	properties in the C++ client binding should be fine now.

Fri Jan 23 02:59:28 2004  Tim Janik  <timj@gtk.org>

	* sficxx.h: added class GNewable which supplies new/delete operators
	based on g_malloc()/g_free(). required, since our generated C++
	classes mimick plain C records/sequences.

	* sfidl-cxx.cc: derive Records from GNewable.

Fri Jan 23 02:30:27 2004  Tim Janik  <timj@gtk.org>

	* sficxx.h: added take() to Sequence, added steal() to Record
	and Sequence. added templates used by code generator:
	cxx_boxed_copy, cxx_boxed_free, cxx_boxed_to_rec,
	cxx_boxed_from_rec, cxx_boxed_to_seq, cxx_boxed_from_seq,
	cxx_value_get_record, cxx_value_set_record,
	cxx_value_get_sequence and cxx_value_set_sequence.

	* sfidl-cxx.[hc]*: copied lots of string helpers from sfidl-module.cc
	here because we still have no single identifier/typename
	manipulation function. added typed_pspec_constructor() and
	untyped_pspec_constructor() to create pspec constructors with and
	without presence of type system respectively.
	added printChoicePrototype() and printChoiceImpl() to implement
	choice generation. lots of fixups to printRecSeqForwardDecl(),
	printRecSeqDecl() and printRecSeqImpl(). added missing record and
	sequence methods, using the above templates.

	* sfidl-module.[hc]*: use pspec constructor generation code from
	sfidl-cxx.c, added choice generation. more property fixes.

	* sfidl-namespace.cc: added fixme, this should generate comments
	telling what namespace was just closed.

	* sfiparams.[hc]: SfiBoxedFields field changes.

	* testsfi.c: