@@ -1,3 +1,8 @@
+Sat Jan 24 01:50:55 2004  Tim Janik  <timj@gtk.org>
+
+	* sfidl-cxx.cc: fixed get_fields() usage in pspec constructors,
+	imlpemented get_fields() for sequences.
+
 Sat Jan 24 01:01:43 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-cxx.cc sficxx.h: Made the to_seq conversion function static,
